--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
-name = "httprunner"
-version = "3.1.4"
+name = "rrtv-httprunner"
+version = "0.1.6"
 description = "One-stop solution for HTTP(S) testing."
 license = "Apache-2.0"
-readme = "README.md"
-authors = ["debugtalk <debugtalk@gmail.com>"]
+#readme = "README.md"
+authors = ["chenfanghang <chenfanghang@foxmail.com>"]
 
-homepage = "https://github.com/httprunner/httprunner"
-repository = "https://github.com/httprunner/httprunner"
-documentation = "https://docs.httprunner.org"
+#homepage = "https://github.com/httprunner/httprunner"
+#repository = "https://github.com/httprunner/httprunner"
+#documentation = "https://docs.httprunner.org"
 
 keywords = ["HTTP", "api", "test", "requests", "locustio"]
 
@@ -45,9 +45,9 @@ filetype = {version = "^1.0.7", optional = true}
 locust = {version = "^1.0.3", optional = true}
 
 [tool.poetry.extras]
-allure = ["allure-pytest"]                  # pip install "httprunner[allure]", poetry install -E allure
-upload = ["requests-toolbelt", "filetype"]  # pip install "httprunner[upload]", poetry install -E upload
-locust = ["locust"]                         # pip install "httprunner[locust]", poetry install -E locust
+allure = ["allure-pytest"]                  # pip install "rrtv_httprunner[allure]", poetry install -E allure
+upload = ["requests-toolbelt", "filetype"]  # pip install "rrtv_httprunner[upload]", poetry install -E upload
+locust = ["locust"]                         # pip install "rrtv_httprunner[locust]", poetry install -E locust
 
 [tool.poetry.dev-dependencies]
 coverage = "^4.5.4"
@@ -55,11 +55,11 @@ uvicorn = "^0.11.3"
 fastapi = "^0.49.0"
 
 [tool.poetry.scripts]
-httprunner = "httprunner.cli:main"
-hrun = "httprunner.cli:main_hrun_alias"
-hmake = "httprunner.cli:main_make_alias"
-har2case = "httprunner.cli:main_har2case_alias"
-locusts = "httprunner.ext.locust:main_locusts"
+httprunner = "rrtv_httprunner.cli:main"
+hrun = "rrtv_httprunner.cli:main_hrun_alias"
+hmake = "rrtv_httprunner.cli:main_make_alias"
+har2case = "rrtv_httprunner.cli:main_har2case_alias"
+locusts = "rrtv_httprunner.ext.locust:main_locusts"
 
 [build-system]
 requires = ["poetry>=1.0.0"]
