--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "rrtv-httprunner"
-version = "1.3.0"
+version = "1.4.0"
 description = "One-stop solution for HTTP(S) testing."
 license = "Apache-2.0"
 #readme = "README.md"
@@ -38,6 +38,7 @@ sentry-sdk = "^0.14.4"
 PyMySQL="^1.0.2"
 redis="^3.5.3"
 jsonpath = "^0.82"
+pymongo = "^3.11.3"
 allure-pytest = {version = "^2.8.16", optional = true}
 requests-toolbelt = {version = "^0.9.1", optional = true}
 filetype = {version = "^1.0.7", optional = true}
