--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "rrtv-httprunner"
-version = "2.3.12"
+version = "2.3.13"
 description = "One-stop solution for HTTP(S) testing."
 license = "Apache-2.0"
 readme = "README.md"
@@ -40,6 +40,7 @@ redis = "^3.5.3"
 jsonpath = "^0.82"
 pymongo = "^3.11.3"
 deepdiff = "^5.5.0"
+demjson = "^2.2.4"
 allure-pytest = { version = "^2.8.16", optional = true }
 requests-toolbelt = { version = "^0.9.1", optional = true }
 filetype = { version = "^1.0.7", optional = true }
