--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ jsonpath = "^0.82"
 pymongo = "^3.11.3"
 deepdiff = "^5.5.0"
 demjson = "^2.2.4"
+curlify = "^2.2.1"
 allure-pytest = { version = "^2.8.16", optional = true }
 requests-toolbelt = { version = "^0.9.1", optional = true }
 filetype = { version = "^1.0.7", optional = true }
